--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "dependencies/libffi"]
 	path = dependencies/libffi
 	url = https://github.com/libffi/libffi.git
+[submodule "dependencies/pcre"]
+	path = dependencies/pcre
+	url = https://github.com/svn2github/pcre.git
