--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "dependencies/pcre"]
 	path = dependencies/pcre
 	url = https://github.com/svn2github/pcre.git
+[submodule "dependencies/glib"]
+	path = dependencies/glib
+	url = https://github.com/GNOME/glib.git
